--- a/components/ProductDesign/Configuration/config.module.scss
+++ b/components/ProductDesign/Configuration/config.module.scss
@@ -36,7 +36,27 @@
     background: #555;
   }
 }
+.tooltip_text {
+  visibility: hidden;
+  width: 180px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  bottom: 100%; /* Position the tooltip above the link */
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
 
+.hover_link:hover + .tooltip_text {
+  visibility: visible;
+  opacity: 1;
+}
 .range {
   direction: ltr;
   width: 100PX;
